# Tracker_NRF_fw

./: .gitignore
tracker_workspace/: .gitignore
tracker_workspace/tracker_fw/: CMakeLists.txt  Kconfig  prj.conf  thingy91_nrf9160_ns.overlay  west.yml
tracker_workspace/tracker_fw/boards/: actinius_icarus_ns.overlay
tracker_workspace/tracker_fw/src/: main.c
tracker_workspace/tracker_fw/src/AWS/: CMakeLists.txt  cloud.c  cloud.h
tracker_workspace/tracker_fw/src/Accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
tracker_workspace/tracker_fw/src/Battery_managment/: CMakeLists.txt  battery_mgmt.c  battery_mgmt.h
tracker_workspace/tracker_fw/src/general_lib/: general_include.h
tracker_workspace/tracker_fw/src/gnss/: CMakeLists.txt  gnss.c  gnss.h
tracker_workspace/tracker_fw/src/gnss_assistance/: CMakeLists.txt
tracker_workspace/tracker_fw/src/json/: CMakeLists.txt  json_lib.c  json_lib.h
tracker_workspace/tracker_fw/src/modem/: CMakeLists.txt  modem.c  modem.h
tracker_workspace/tracker_fw/src/shell/: CMakeLists.txt  shell.c
tracker_workspace/tracker_fw/src/timer/: CMakeLists.txt  timer.c  timer.h
